Frontend/css/home_page.css
* {
  margin: 0%;
  padding: 0%;
}

body {
  background-color: #effdf5;
  width: 85%;
  margin: auto;
  font-family: "Montserrat", sans-serif;
  font-size: 1em;
}

/* this part is the banner part  */
.container {
  width: 100%;
  height: 500px;
  overflow: hidden;
  position: relative;
}

.bannerContent {
  padding: 0%;
  margin: 0%;
  display: flex;
  list-style-type: none;
  width: 100%;
  height: 400px;
  object-fit: cover;
  position: absolute;
}

/* ......................................... */
.discription {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: start;
}

.discription p {
  font-weight: 300;
  margin-top: 2%;
}

.disc_b {
  height: 60px;
  width: 170px;
  margin-top: 30px;
  background-color: #00b98e;
  border-radius: 6px;
  border: none;
  color: aliceblue;
  font-weight: 500;
  font-size: 16px;
  transition: background 0.2s ease-in-out;
}

.disc_b:hover {
  background-color: #0e2e50;
}

.forward-buttons {
  width: 50px;
  height: 50px;
  border-radius: 100%;
  border: none;
  background-color: #00b98e;
  color: aliceblue;
  transition: background 0.2s ease-in-out;
}
.backward-buttons {
  width: 50px;
  height: 50px;
  border-radius: 100%;
  border: none;
  background-color: #00b98e;
  color: aliceblue;
  transition: background 0.2s ease-in-out;
}

.bannerContent img {
  width: 660px;
}

#img1 {
  opacity: 1;
}
#img2 {
  opacity: 0;
}
#img3 {
  opacity: 0;
}

.forward-buttons:hover {
  background-color: #0e2e50;
}
.backward-buttons:hover {
  background-color: #0e2e50;
}

/* thiss part is the card part  */
.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 410px;
  height: 410px;
  overflow: hidden;
  border-radius: 5px;
  margin: auto;
  box-sizing: border-box;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
}

.cardimg {
  width: 100%;
  height: 300px;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.tag {
  max-width: fit-content;
  padding: 2% 3%;
  background-color: white;
  color: #00b98e;
  opacity: 1;
  border-radius: 10px;
  transform: translate(30px, -20px);
  font-size: 16px;
  font-family: "Heebo", sans-serif;
}

.cardimg img {
  transition: all 0.2s ease-in-out;
  width: 100%;
  object-fit: contain;
}

.cardimg img:hover {
  transform: scale(1.1);
}
.card_discription {
  width: 100%;
  z-index: 10;
  opacity: 1;
}
.tr {
  width: 30%;
}

.card_div {
  display: grid;
  width: 95%;
  gap: 1.5rem;
  box-sizing: border-box;
  grid-template-columns: repeat(3, minmax(280px, 1fr));
  margin: 50px auto;
  padding-bottom: 10%;
}

.card_text1 {
  color: #00b98e;
  padding: 5px 0 10px 0;
  font-size: 20px;
  margin-left: 20px;
}

.card_text2 {
  color: #0e2e50;
  font-size: 20px;
  padding: 5px 0 10px 0;
  margin-left: 20px;
  font-weight: 600;
}

.card_text3 {
  padding: 5px 0 10px 0;
  margin-left: 20px;
  opacity: 60%;
  font-weight: 600;
}

.card-foot {
  display: flex;
  flex-direction: row;
  height: 30px;
  align-items: center;
  justify-content: center;
  color: lightgray;
  font-weight: 300;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
}

.card-foot-c {
  width: 32.5%;
  padding: 2%;
  display: flex;
  align-items: center;
  justify-content: center;
  border-style: dashed;
  border-width: 1px;
  border-color: #14e9b7;
  font-weight: 500;
  color: gray;
}

.small-icons {
  margin-right: 5%;
  color: #05bb90;
  font-size: 13px;
  opacity: 1;
}

.bigger-icons {
  font-size: 20px;
  margin-right: 2%;
}

.d {
  display: inline-block;
  padding: 20px 30px 20px 30px;
  border-style: groove;
}

.menus {
  display: grid;
  gap: 3rem;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  margin: auto;
}

.menu {
  width: 250px;
  height: 180px;
  border-width: 20px;
  display: inline;
  border-style: solid;
  border-color: rgb(230, 255, 247);
  border-radius: 10px;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  transition: background 0.2s ease-in;
}
.menu:hover {
  background: #00b98e;
  color: white;
}

.menu .men {
  padding-top: 3%;
  width: 90%;
  margin: auto;
}

.icon_div {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 94px;
  height: 94px;
  border: 2px dotted #14e9b7;
  background-color: white;
  border-radius: 50%;
  opacity: 1;
}
.prorperties {
  color: #0e2e50;
  font-size: 15px;
}
.icon_label {
  color: #0e2e50;
  font-size: 15px;
  font-weight: 600;
}
/* ....................................................... */
/* this one is the form part  */
form {
  height: 200px;
  width: 100%;
  display: inline-block;
  margin: 40px 0 40px 0;
}

/* .listing {
  width: 100px;
  height: 30px;

  border-radius: 5px;
  border-color: #00b98e;
  color: #00b98e;
  border-width: 3px;
}

.listing:hover {
  background-color: #00b98e;
  color: aliceblue;
} */

.form_div {
  background-color: #00b98e;
  width: 100%;
  overflow: hidden;
}

.color-white {
  color: white;
}

.form_content {
  height: 50px;
  width: 250px;
  margin: 0 5px;
  border-radius: 6px;
  padding: 0 1%;
  border: none;
  color: aliceblue;
  background-color: white;
  font-weight: 700;
}

.navbar.sticky {
  width: 96%;
}
.navbar {
  position: sticky;
  top: 0;
  width: 85%;
  height: 40px;
  margin: auto;
  z-index: 1;
  display: flex;
  background-color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  padding: 1% 2%;
  transition: width 0.3s ease-in;
}
.navbar-logo {
  display: flex;
  align-items: center;
}
.navbar-logo img {
  width: 40px;
  height: 40px;
  margin-right: 10px;
}
.navbar-title a {
  text-decoration: none;
  font-size: 35px;
  font-weight: 800;
  color: #00b98e;
}
.navbar-links {
  display: flex;
  gap: 20px;
}
.navbar-links a {
  justify-content: space-between;
  color: #0e2e50;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 15px;
  font-weight: lighter;
}

.navbar-links a:hover,
.navbar-links a:active {
  color: #00b98e;
  transition: color 0.2s ease-in-out;
}

.link-container {
  display: flex;
  width: 550px;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.navbar-login {
  padding: 10px 16px;
  background-color: #00b98e;
  color: white;
  border-radius: 5px;
  text-decoration: none;
  font-size: 16px;
  border: none;
  cursor: pointer;
  transition: background 0.2s ease-in-out;
}

.navbar-login:hover {
  background-color: #0e2e50;
}

.button-featured {
  margin-left: 5px;
  padding: 10px;
  width: 100px;
  background-color: white;
  color: #00b98e;
  border-radius: 5px;
  font-size: 16px;
  cursor: pointer;
  border: 1px solid #00b98e;
  transition: background 0.2s ease-in-out;
}

.button-featured:hover,
.button-featured:active {
  background-color: #00b98e;
  color: white;
}

.butns {
  /* display: inline-block; */
  display: flex;
  align-items: center;
  justify-content: end;
  margin-right: 3%;
}

.form_button {
  font-weight: 500;
  font-size: 16px;
  font-weight: bold;
  background-color: #0e2e50;
  color: white;
  transition: background 0.2s ease-in-out;
}

.form_button:hover {
  background-color: #113c69;
}

.form_content:focus {
  outline: none;
}

main {
  position: relative;
  top: -130px;
  background-color: white;
}

footer {
  background-color: #0e2e50;
  color: #6c757d;
}

.white {
  color: aliceblue;
}

.scroll {
  position: absolute;
  top: 15%;
  margin: 30px;
}

.f_content {
  margin: 40px;
  display: inline-block;
}

.f_content2 {
  padding: 40px;
}

.contact {
  opacity: unset;
  width: 40px;
  height: 40px;
  border-radius: 100%;
  color: aliceblue;
  background-color: #0e2e50;
  margin-top: 15px;
}

.tex {
  height: 40px;
  width: 200px;
  border-radius: 7px;
  padding: 0 1%;
  background-color: #0e2e50;
  color: white;
}

.texb {
  width: 70px;
  height: 45px;
  background-color: #00b98e;
  color: aliceblue;
  border-radius: 5px;
  padding: 0 1%;
}

.center_form {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
}
.wid {
  width: 50%;
}

h1 {
  color: #0e2e50;
}
.form_content {
  width: 250px;
  color: black;
  font-weight: 100;
}
.form_button {
  color: aliceblue;
}

/* ................................................... */

@media only screen and (min-width: 660px) {
  .container {
    width: 50%;
    overflow: hidden;
    height: 660px;
  }
  .curousel {
    display: flex;
    height: 76vh;
  }

  .bannerContent {
    overflow: hidden;
    min-height: 600px;
  }

  .discription {
    font-size: 1.25em;
    display: inline-block;
    padding: 20px;
    width: 80%;
  }

  .first {
    display: flex;
  }

  .formm {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .form_div {
    width: 100%;
  }
  .form_content {
    width: 155px;
  }

  form {
    height: 100px;
    width: 100%;
    display: inline-block;
    margin: 40px 0 40px 0;
  }

  .types {
    width: 400px;
    text-align: center;
    margin: 70px;
  }

  .scroll {
    position: absolute;
    top: 200px;
    right: 48%;
  }

  .form_content {
    color: black;
  }
  .form_button {
    color: aliceblue;
  }
}

@media only screen and (min-width: 1080px) {
  .form_content {
    width: 250px;
    color: black;
  }
  .form_button {
    color: aliceblue;
  }
}

.properties-container .box:hover {
  transform: translateY(-5px);
  transition: 0.3s;
}
.properties-container .box img {
  border-radius: 1rem;
  height: 220px;
  object-fit: cover;
  object-position: center;
}
.properties-container .box img:hover {
  transform: scale(1);
  transition: 0.5s;
}
.properties-container h3 {
  font-size: 1rem;
  font-weight: 600;
  float: right;
}
.properties-container .box .content {
  display: flex;
  justify-content: space-between;
  margin-top: 2rem;
}
.properties-container .box .content .text h3 {
  font-weight: 500;
}
.properties-container .box .content .text p {
  font-weight: 0.8rem;
}
.properties-container .box .content .icon {
  display: flex;
  align-items: center;
  column-gap: 1rem;
}
.properties-container .box .content .icon .bx {
  display: flex;
  align-items: center;
  font-size: 20px;
}
.properties-container .box .content .icon span {
  font-size: 12px;
  font-weight: 500;
  margin-left: 4px;
}

.properties {
  background: #fbfbfb;
  border-radius: 2rem;
}
.properties-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, auto));
  gap: 4rem;
  padding: 0 50px;
}
.properties-container .box {
  background: var(--light);
  padding: 10px;
  border-radius: 1rem;
  box-shadow: var(--dark);
  border: 1px solid rgba(0, 185, 142, 0.3) !important;
}

